--- a/content/BART/2019.Aug.15.Editorial.md
+++ b/content/BART/2019.Aug.15.Editorial.md
@@ -28,6 +28,8 @@ Collectively, these programs will provide more crucial facilities and resources 
 
 [**At a time when 44 percent of customers are dissatisfied with its services**](https://data.bart.gov/dataset/experience/resource/9f663eb5-ad83-4123-832c-1e778995d8f5), BART should continue to approve and expand initiatives such as the quality-of-life campaign.
 
+[SEE Jupyter Notebook](../notebooks/bartpop.ipynb)
+
 3rd rail replacement
 
 From August to October, BART will be working to improve its infrastructure by replacing 3,200 feet of its third rail. According to BART spokesperson Chris Filippi, this project, funded through Measure RR, is a necessary improvement, considering the rails have “outlived their useful lives.”
