many tables with questions

--- a/content/BART/2019-Aug-15.md
+++ b/content/BART/2019-Aug-15.md
@@ -8,12 +8,25 @@
 - "It’s true that the system’s environmental footprint will likely be reduced"  needs a simple numerical scale: how many disposable tickets are issued a year, what's the poundage of plastic used by each ticket format; what's the volume of Clipper cards issued, and how much mass do they have, and so on.
 - This should be embedded in a larger, continuously updated JN showing all of BART's environmental impact, measured in tons of CO2, as Paul Hawken does in [Drawdown](https://www.drawdown.org)
 
-
+---
+---
 
 
 Public transportation is an integral part of any urban area, and BART is no exception. Thousands of commuters depend on the transit system as their main source of transportation. But in recent years, BART has seen a decline in ridership as overcrowding, delays and crime have risen.
 
+Data Element  |  Source |  JN
+::|:-:|::
+Ridership  |   |
+Overcrowding  |   |
+Delays  |   |
+Crime Rate  |   |
+
 BART has been making attempts to address these issues through a series of initiatives, some of which have used funding from the \$3.5 billion designated to rebuilding BART through Measure RR. But some of these improvements have created problems of their own.
+Data Element  |   |
+::|:-:|::
+Annual Capital Budget  |   |
+Annual Measure RR Spend  |   |
+
 
 With its floundering accessibility and a dire need for new infrastructure, BART has many miles to go before it catches up with the Bay Area’s needs. Join us as we take a closer look at some of the twists and turns these improvements have taken.
 
@@ -21,7 +34,23 @@ With its floundering accessibility and a dire need for new infrastructure, BART 
 
 Recently, the BART Board of Directors approved a \$2.3 billion budget for the 2020 fiscal year; part of the budget will be dedicated to quality-of-life initiatives, with \$27 million being allocated to projects such as security, homeless outreach and fare evasion prevention.
 
+Budget Element  | FY2020  |  FY2019
+::|:-:|::
+Capital  |   |
+Personnel  |   |
+Maintenance  |   |
+Debt Service  |   |
+
 To ensure the safety of its riders, BART allocated an unprecedented $2.1 million to hiring 19 new police officers. But the funds allocated for this increased policing should not dip into the already limited \$59 million allocated to the quality-of-life initiatives, which include other important security proposals. If BART makes policing funds a separate part of its budget, then more money can be dedicated to these urgent outreach and wellness initiatives.
+
+QOL/Safety`  |  2019 |  2020
+::|:-:|::
+Number of police  |   |
+QOL initiative  |   |
+Crime level  |   |
+Cleanliness  |   |
+Wellness  |   |
+Outreach  |   |
 
 BART is investing \$2 million this upcoming year in outreach and Pit Stop restroom maintenance. While BART’s increased commitment to rehousing and supporting homeless individuals is commendable, it needs to ensure that the recently announced fare increase of 5.4 percent doesn’t negate its efforts to aid low-income populations. On top of that, BART should actively seek feedback from riders to ensure that the Metropolitan Transportation Commission’s 20 percent discount is enough for those populations that it hopes to aid with its new budget.
 
@@ -47,13 +76,29 @@ Collectively, these programs will provide more crucial facilities and resources 
 
 From August to October, BART will be working to improve its infrastructure by replacing 3,200 feet of its third rail. According to BART spokesperson Chris Filippi, this project, funded through Measure RR, is a necessary improvement, considering the rails have “outlived their useful lives.”
 
+Measure  | 2019  |  2020
+::|:-:|::
+Total 3rd Rail length  |   |
+New 3rd Rail length  |   |
+Ratio of new to old |   |
+
 The new stainless steel-capped railings, which will eventually be employed systemwide, are reportedly lighter, more flexible and quieter than the current rails. As a result, noise pollution coming from BART will likely decrease, and riders will have a more efficient commute thanks to the more economical and conductive railing.
+
+Measure  |  2019 |  2020
+::|:-:|::
+Distribution of sound level by station  | array of charts by line  |
+Map of noisiest stations  |   |
 
 Improvements to infrastructure often seem to not be a priority for institutions, cities and even the state. Through its investment in bringing its infrastructure up to industry standards, BART is taking a step in the right direction. By replacing the outdated rails with updated equipment, BART is putting a refreshing value on the safety of its riders and the integrity of its infrastructure.
 
 New rail car assembly site
 
 In June, BART collaborated with Bombardier Transportation on an initiative to move the production site of its “Fleet of the Future” railway cars from upstate New York to Pittsburg, California. Filippi cited this move as a way for BART to increase job opportunities for workers in the Bay Area and to “contribute tax dollars to the local economy.” He also emphasized the shift as a more efficient way to produce the cards and transport them to where they are needed.
+
+  | 2019  |  2020
+::|:-:|::
+Jobs created  |   |
+Distance commuted by workers at Pittsburg  |   |
 
 This project cites many benefits, but it is important that BART stays transparent in the creation of this production facility in the Bay Area. The environmental footprint of the facility, from its exact placement in the city to the repercussions it may have on the surrounding community, should be considered as the change is made. As it moves forward with development, BART must keep the community informed on the environmental impacts the new site may have, including air and noise pollution. Overall, environmentally friendly policies must not be sacrificed for increased efficiency of production.
 
