--- a/content/BART/2019-Aug-15.md
+++ b/content/BART/2019-Aug-15.md
@@ -69,7 +69,7 @@ Ratio by cost/Year  |   |
 Amount of plastic, total  |   |
 Per cent recaptured  |   |
 Carbon embedded  |   |
-Lost cards/year  |   |  
+Lost cards/year  |   |
 
 Another major concern is the effect of this switch to Clipper cards on low-income BART riders. While the \$3 purchase fee can be waived if riders sign up online to have their cards autoloaded when the balance nears zero, people living paycheck to paycheck may not be able to do so. And when riders lose their cards, Clipper charges a fee to replace it and reload the balance lost. BART needs to take more steps to keep the system accessible to low-income riders, such as a program that allows them to apply for free Clipper cards at station kiosks. These fees may seem insignificant, but they more than double the cost of a short BART trip.
 
@@ -106,7 +106,7 @@ New rail car assembly site
 
 In June, BART collaborated with Bombardier Transportation on an initiative to move the production site of its “Fleet of the Future” railway cars from upstate New York to Pittsburg, California. Filippi cited this move as a way for BART to increase job opportunities for workers in the Bay Area and to “contribute tax dollars to the local economy.” He also emphasized the shift as a more efficient way to produce the cards and transport them to where they are needed.
 
-  | 2019  |  2020
+Data element  | 2019  |  2020
 ::|:-:|::
 Jobs created  |   |
 Distance commuted by workers at Pittsburg  |   |
