--- a/content/BART/2019-Aug-15.md
+++ b/content/BART/2019-Aug-15.md
@@ -2,7 +2,7 @@
 #### Daily Cal Editorial, August 15, 2019
 
 
-## _Each data point can to be put in perspective_ to aid the reader unfamiliar with BART.
+## _Each data point may be put in perspective_ to aid the reader unfamiliar with BART.
 
 - As an example, the "unprecedented \$2.1 billion budget" needs to be contrasted with past budget amounts. How much bigger is it?
 - The "\$27 million for quality of live" needs to be contrasted with the other major budget categories--maintenance, rolling stock, General management, staff payroll....
