--- a/content/BART/2019-Aug-15.md
+++ b/content/BART/2019-Aug-15.md
@@ -5,7 +5,7 @@
 ## _Each data point may be put in perspective_ to aid the reader unfamiliar with BART.
 
 - As an example, the "unprecedented \$2.1 billion budget" needs to be contrasted with past budget amounts. How much bigger is it?
-- The "\$27 million for quality of live" needs to be contrasted with the other major budget categories--maintenance, rolling stock, General management, staff payroll....
+- The "\$27 million for quality of life" needs to be contrasted with the other major budget categories--maintenance, rolling stock, General management, staff payroll....
 - "It’s true that the system’s environmental footprint will likely be reduced"  needs a simple numerical scale: how many disposable tickets are issued a year, what's the poundage of plastic used by each ticket format; what's the volume of Clipper cards issued, and how much mass do they have, and so on.
 - A larger, continuously updated JN could show all of BART's environmental impact, measured in tons of CO2, as Paul Hawken does in [Drawdown](https://www.drawdown.org)
 
