--- a/content/BART/2019-Aug-15.md
+++ b/content/BART/2019-Aug-15.md
@@ -82,7 +82,7 @@ Collectively, these programs will provide more crucial facilities and resources 
 
 [**At a time when 44 percent of customers are dissatisfied with its services**](https://data.bart.gov/dataset/experience/resource/9f663eb5-ad83-4123-832c-1e778995d8f5), BART should continue to approve and expand initiatives such as the quality-of-life campaign.
 
-[SEE Jupyter Notebook](../../notebooks/bartpop.html)
+[SEE Jupyter Notebook](../../notebooks/bartpop.html)  The survey number expressing dissatisfaction is actually 21%, since 22% say they are neutral.
 
 3rd rail replacement
 
