--- a/content/BART/2019-Aug-15.md
+++ b/content/BART/2019-Aug-15.md
@@ -80,8 +80,16 @@ Amount of plastic, total  |   |
 Per cent recaptured  |   |
 Carbon embedded  |   |
 Lost cards/year  |   |
+Returned cards/year   |   |
 
 Another major concern is the effect of this switch to Clipper cards on low-income BART riders. While the \$3 purchase fee can be waived if riders sign up online to have their cards autoloaded when the balance nears zero, people living paycheck to paycheck may not be able to do so. And when riders lose their cards, Clipper charges a fee to replace it and reload the balance lost. BART needs to take more steps to keep the system accessible to low-income riders, such as a program that allows them to apply for free Clipper cards at station kiosks. These fees may seem insignificant, but they more than double the cost of a short BART trip.
+
+
+Initiatives for low-income ridership | Number issued|Cost|
+::|:-:|::|
+Ticket subsidies  |   |  |
+Free Clipper cards`   |   |   |
+
 
 Quality-of-life initiatives
 
@@ -89,9 +97,15 @@ BART’s quality-of-life campaign is an encouraging step toward improving the Ba
 
 Collectively, these programs will provide more crucial facilities and resources to BART patrons, including clean, safe public toilets adjacent to stations and outreach teams for the homeless community at more BART locations. With such limited public sanitary and waste resources available to homeless individuals in the Bay Area, this program is an important step toward improving standards of health and safety for these communities. Additionally, providing an attendant at the elevators to and from BART platforms has been an essential step in ensuring the conditions remain clean and accessible for those who are unable to take the stairs.
 
+Facilities |2018|2019|2010
+::|:-:|::| ::
+Existing accessible toilets/station |
+New toilets planned
+
+
 [**At a time when 44 percent of customers are dissatisfied with its services**](https://data.bart.gov/dataset/experience/resource/9f663eb5-ad83-4123-832c-1e778995d8f5), BART should continue to approve and expand initiatives such as the quality-of-life campaign.
 
-[SEE Jupyter Notebook](../../notebooks/bartpop.html)  The survey number expressing dissatisfaction is actually 21%, since 22% say they are neutral.
+#### [SEE Jupyter Notebook](../../notebooks/bartpop.html)  The survey number expressing dissatisfaction is actually 21%, since 22% say they are neutral.
 
 3rd rail replacement
 
@@ -102,6 +116,7 @@ Measure  | 2019  |  2020
 Total 3rd Rail length  |   |
 New 3rd Rail length  |   |
 Ratio of new to old |   |
+Cost per mile of replacement   |   |
 
 The new stainless steel-capped railings, which will eventually be employed systemwide, are reportedly lighter, more flexible and quieter than the current rails. As a result, noise pollution coming from BART will likely decrease, and riders will have a more efficient commute thanks to the more economical and conductive railing.
 
