rail length and age

--- a/content/BART/2019-Aug-15.md
+++ b/content/BART/2019-Aug-15.md
@@ -113,6 +113,8 @@ From August to October, BART will be working to improve its infrastructure by re
 
 Measure  | 2019  |  2020
 ::|:-:|::
+Total System Rail length  |   |
+Percent rail older than 10 years  |   |  
 Total 3rd Rail length  |   |
 New 3rd Rail length  |   |
 Ratio of new to old |   |
