--- a/content/BART/2019-Aug-15.md
+++ b/content/BART/2019-Aug-15.md
@@ -105,7 +105,7 @@ New toilets planned
 
 [**At a time when 44 percent of customers are dissatisfied with its services**](https://data.bart.gov/dataset/experience/resource/9f663eb5-ad83-4123-832c-1e778995d8f5), BART should continue to approve and expand initiatives such as the quality-of-life campaign.
 
-#### [SEE Jupyter Notebook](../../notebooks/bartpop.html)  The survey number expressing dissatisfaction is actually 21%, since 22% say they are neutral.
+#### [SEE Jupyter Notebook](../../notebooks/bartpop.html)  The survey number expressing dissatisfaction is actually 21%, not 44% since 22% say they are neutral.
 
 3rd rail replacement
 
@@ -114,7 +114,7 @@ From August to October, BART will be working to improve its infrastructure by re
 Measure  | 2019  |  2020
 ::|:-:|::
 Total System Rail length  |   |
-Percent rail older than 10 years  |   |  
+Percent rail older than 10 years  |   |
 Total 3rd Rail length  |   |
 New 3rd Rail length  |   |
 Ratio of new to old |   |
